fixed input and search button width on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,4 +41,9 @@ input {
         margin-left: 1.5rem;
         margin-bottom: 0;
     }
+
+    .input, .btn {
+        width: 98%;
+    }
+
 }
